--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="javascript" href="/js/app.js">
+    <!--- <link rel="javascript" href="/js/app.js"> -->
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,6 +25,21 @@
     <li>hope</li>
     <li>eradicated</li>
 </ol>
+
+
+<div>
+    <script src="js/app.js"></script>
+
+    <script>
+        console.log("js from html file");
+    </script>
+
+    <a href="about.html">About</a>
+    <br>
+    <br>
+    <a href="https://www.ventspilstehnikums.lv/" target="_blank">sponsor</a>
+
+</div>
 
 </body>
 </html>
